  [bug introduced in coreutils-8.27]

  dd status=progress now just counts seconds; e.g., it outputs "6 s"
  consistently rather than sometimes outputting "6.00001 s".
  [bug introduced in coreutils-8.24]

  df no longer interacts with excluded file system types, so for example
  specifying -x nfs no longer hangs with problematic nfs mounts.
  [bug introduced in coreutils-8.21]

  split no longer exits when invocations of a --filter return EPIPE.
  [bug introduced in coreutils-8.26]

  md5sum --check no longer incorrectly enables BSD reversed format mode when
  ignoring some non checksum lines.  This also affects sha*sum and b2sum.
  [bug introduced in coreutils-8.14]

  tail -F 'dir/file' is now monitored even when 'dir' is replaced.
  [bug introduced with inotify support added in coreutils-7.5]

  tail -f with --pid=PID now processes all inotify events.
  Previously events may have been ignored completely upon PID death,
  or ignored until future events on the monitored files.
  [bug introduced with inotify support added in coreutils-7.5]

  tail -f /dev/tty is now supported by not using inotify when any
  non regular files are specified, as inotify is ineffective with these.
  [bug introduced with inotify support added in coreutils-7.5]

  uptime no longer outputs the AM/PM component of the current time,
  as that's inconsistent with the 24 hour time format used.
  [bug introduced in coreutils-7.0]

  expr now returns number of characters matched (instead of incorrect
  number of bytes matched) with 'match'/':' operators on multibyte strings.

** New features

  expand and unexpand now support specifying an offset for tab stops
  by prefixing the last specified number like --tabs=1,+8 which is
  useful for visualizing diff output for example.

  split supports a new --hex-suffixes[=from] option to create files with
  lower case hexadecimal suffixes, similar to the --numeric-suffixes option.

  expr supports multibyte strings for all string operations.
